# termux-elf-cleaner

./: meson.build
